--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@
 
 
   <footer>
-    Made with ❤️ in London.
+    Made by Julie Zenou
   </footer>
+
+  <script src="./index.js" charset="utf-8"></script>
 </body>
 
 </html>
